@@ -1,6 +1,12 @@
 # ChangeLog for dev-haskell/sha
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/sha/ChangeLog,v 1.7 2013/07/21 17:26:40 ottxor Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/sha/ChangeLog,v 1.8 2014/02/21 21:57:05 slyfox Exp $
+
+*sha-1.6.4-r1 (21 Feb 2014)
+
+  21 Feb 2014; Sergei Trofimovich <slyfox@gentoo.org> +sha-1.6.4-r1.ebuild,
+  metadata.xml:
+  Version bump.
 
   21 Jul 2013; Christoph Junghans <ottxor@gentoo.org> sha-1.6.1.ebuild:
   added ~amd64-linux (tested by me)
